ensure 'Firing Since' column is minimum width so that date/time wraps the same way in all cases

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -476,8 +476,10 @@ thead {
   color: #fff;
 }
 
-td.snug {
-  width: 1px;
+td, th {
+  &.snug {
+    width: 1px;
+  }
 }
 
 .action-buttons {
